Updated UI, changed the layout, still need to add projects

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
       crossorigin="anonymous"
     />
   </head>
-  <body style="background-color: #212127;">
+  <body style="background-color: #f2f0f5;">
 
     <div class="container">
-      <ul class="nav justify-content-center">
+      <ul class="nav justify-content-center fixed-top">
         <li class="nav-item">
-          <a class="nav-link active" href="#about">About</a>
+          <a class="nav-link active lead" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#projects">Projects</a>
+          <a class="nav-link lead" href="#contact">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link lead" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resume.pdf">Resume</a>
+          <a class="nav-link lead" href="resume.pdf">Resume</a>
         </li>
       </ul>
     </div>
@@ -39,38 +39,25 @@
         </h1>
         <h3 class=" text-center text-muted mt-0 pb-0">Database Developer</h3>
       </div>
-
-
-    </div>
-    <div id="about" class="container">
-      <h1 class="display-4">About</h1>
-      <p>Thanks for stopping! I am a self taught developer, with some college but decided to take the self-taught route.
-      I am self-motivated, passionate and have a genuine love for all things code and the people that come with it.
-      Below are some of my projects
-      </p>
-
-
     </div>
 
     <div id="projects" class="container">
       <h1 class="display-4">Projects</h1>
-      <p>Maybe use bootstrap cards, Links to github and/or links to working project</p>
-
+      <p class="lead">Be sure to check out my <a href="">Philosophy of Code</a></p>
       <div class="card">
         <h5 class="card-header">Judge Database</h5>
         <div class="card-body">
-          <h5 class="card-title">Python, Flask, HTML/CSS, Bootstrap, SQLite</h5>
+          <h5 class="card-title lead">Python, Flask, HTML/CSS, Bootstrap, SQLite</h5>
           <p class="card-text">User can search for judge name and statute. Returns total cases of that statute from the judge, and total cases from whole database</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-outline-secondary">Go somewhere</a>
         </div>
       </div>
-
       <div class="card mt-5">
-        <h5 class="card-header">International Space Station tracker</h5>
+        <h5 class="card-header">International Space Station Tracker</h5>
         <div class="card-body">
-          <h5 class="card-title">Python, Flask, HTML/CSS, Bootstrap, SQLite</h5>
+          <h5 class="card-title lead">Python, Flask, HTML/CSS, Bootstrap, SQLite</h5>
           <p class="card-text">User can search for judge name and statute. Returns total cases of that statute from the judge, and total cases from whole database</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-outline-secondary">Go somewhere</a>
         </div>
       </div>
     </div>
@@ -78,6 +65,13 @@
     <div id="contact" class="container">
       <h1 class="display-4">Contact</h1>
       <p>Tele number and email</p>
+    </div>
+
+    <div id="about" class="container">
+      <h1 class="display-4">About</h1>
+      <p class="lead">Thanks for stopping! I am a self taught developer, with some college but decided to take the self-taught route.
+      I am self-motivated, passionate and have a genuine love for all things code and the people that come with it.
+      </p>
     </div>
   </body>
 </html>
