Changed ISS Tracker desc.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h5 class="card-header">International Space Station Tracker</h5>
         <div class="card-body">
           <h5 class="card-title lead">Python, Flask, HTML/CSS, Bootstrap, SQLite</h5>
-          <p class="card-text">User can search for judge name and statute. Returns total cases of that statute from the judge, and total cases from whole database</p>
+          <p class="card-text">User can type their city and the app returns when the ISS will be going over your city next.</p>
           <a href="#" class="btn btn-outline-secondary">Go somewhere</a>
         </div>
       </div>
