--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -47,11 +47,13 @@
     <div class=" mt-5 container">
       <div class="row">
         <div class="col-lg">
-          <h1 class="pt-5">Dominic Thomas <span class="lead text-muted">software developer</span></h1>
+          <h1 class="pt-5">Dominic Thomas <span class="lead text-muted">web developer</span></h1>
           <hr>
-          <p class="lead">I like to work on backend of websites, servers. Make useful software for the world to use. Spread knowledge and information through code. Overall, change the world one line of code at a time. Code junkie.</p>
+          <p class="lead">I mainly work on websites, front-end and back-end. I use React, JavaScript and Python.</p>
         </div>
       </div>
+      <a href="https://github.com/domtom1126" target="_blank"><img src="images/GitHub-Mark-32px.png"></a>
+      <a href="https://www.linkedin.com/in/d0mt0m/" target="_blank"><img width="40" height="35" src="images/LI-In-Bug.png"></a>
     </div>
   </section>
   <section>
