Updated and cleaned up

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+<!--       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home</a>
@@ -38,7 +38,7 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </nav>
 
@@ -47,13 +47,11 @@
     <div class=" mt-5 container">
       <div class="row">
         <div class="col-lg">
-          <h1 class="pt-5">Dominic Thomas <span class="lead text-muted">web developer</span></h1>
+          <h1 class="pt-5">Dominic Thomas <span class="lead text-muted">web developer <a href="https://github.com/domtom1126" target="_blank"><img class="" src="images/GitHub-Mark-32px.png"></a></span></h1>
           <hr>
-          <p class="lead">I mainly work on websites, front-end and back-end. I use React, JavaScript and Python.</p>
+          <p class="lead">Machine learning, Flask, Python</p>
         </div>
       </div>
-      <a href="https://github.com/domtom1126" target="_blank"><img src="images/GitHub-Mark-32px.png"></a>
-      <a href="https://www.linkedin.com/in/d0mt0m/" target="_blank"><img width="40" height="35" src="images/LI-In-Bug.png"></a>
     </div>
   </section>
   <section>
@@ -61,6 +59,18 @@
       <h1 class="pt-5">Projects</h1>
       <hr>
       <div class="row">
+        <div class="col-lg-6">
+          <h1 class="pt-5" href="sdgf">Bail Analyzer<span class="lead text-muted"> Python, Scikit-Learn, Flask</span></h1>
+          <p>Flask app that can predict a bail amount based on parameters that are provided by the user. Predictions are based on freely available public information.  
+            <span><a target="_blank" href="http://45.79.163.147/bail">View here</a></span>
+          </p>
+        </div>
+        <div class="col-lg-6">
+          <h1 class="pt-5" href="sdgf">Prison Analyzer<span class="lead text-muted"> Python, Scikit-Learn, Flask</span></h1>
+          <p>Flask app that can predict "yes" or "no" based on parameters that are provided by the user. Predictions are based on freely available public information.
+            <span><a target="_blank" href="http://45.79.163.147">View here</a></span>
+          </p>
+        </div>
         <div class="col-lg-6">
           <h1 class="pt-5" href="sdgf">ISS Tracker <span class="lead text-muted">Python, Selenium, Flask</span></h1>
           <p>Web app allows users to track the International Space Station. Uses web scraping to get ISS flight data. Maths done to calculate speed and distance to your location.
@@ -77,12 +87,6 @@
           <h1 class="pt-5">Calculate Volume <span class="lead text-muted">C#</span></h1>
           <p>Terminal application to determine the volume of 3-d shapes. Measurements and shape are decided by the user.
             <span><a target="_blank" href="https://github.com/domtom1126/calculateVolume">View here</a></span>
-          </p>
-        </div>
-        <div class="col-lg-6">
-          <h1 class="pt-5">Dealership Database <span class="lead text-muted">Python, Flask, SQLite</span></h1>
-          <p>Users can add cars to database. Work in progress...
-            <span><a target="_blank" href="https://github.com/domtom1126/dealership">View here</a></span>
           </p>
         </div>
       </div>
